mean-stack-example/manifest.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: webapp
  name: webapp
  annotations:
    sidecar.istio.io/inject: "true"
spec:
  replicas: 4
  selector:
    matchLabels:
      app: webapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webapp
    spec:
      containers:
      - image: gcr.io/kubernetes-demo-379306/webapp1:v1
        name: webapp
        imagePullPolicy: Always
        resources: {}
        ports:
          - containerPort: 80 
status: {}

---

apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    run: webapp
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: webapp
  type: LoadBalancer
